fix header z-index

--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ ul li a {
 header {
     position: sticky;
     top: 0;
-    
+    z-index: 2;
 }
 
 .header-main {
